--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -10,9 +10,10 @@
 
     <ImageView
         android:id="@+id/product_image"
-        android:layout_width="100dp"
+        android:layout_width="300dp"
         android:layout_height="100dp"
-        android:scaleType="centerCrop"/>
+        android:layout_gravity="center"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="16dp"
-            android:text="Product name :" />
+            android:text="@string/product_name" />
 
         <EditText
             android:id="@+id/name_id"
@@ -44,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="16dp"
-            android:text="Product price :" />
+            android:text="@string/Product_price" />
 
         <EditText
             android:id="@+id/price_id"
@@ -64,14 +65,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:padding="16dp"
-            android:text="Product quantity :" />
+            android:text="@string/product_quantity" />
 
         <TextView
             android:id="@+id/quantity_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="20dp"
-            android:text="0" />
+            android:text="1" />
 
         <at.markushi.ui.CircleButton
             app:cb_color="@color/colorPrimary"
@@ -100,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="15dp"
-            android:text="Order from supplier: " />
+            android:text="@string/Order_supplier" />
 
         <ImageView
             android:id="@+id/imageView"
