--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/name_item"
-        android:textSize="30dp"
+        android:textSize="30sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -19,7 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:textSize="30dp"
+        android:textSize="30sp"
         tools:text="TEST" />
 
     <RelativeLayout
@@ -46,7 +46,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:layout_toLeftOf="@id/decrease_button"
-            android:textSize="30dp"
+            android:textSize="30sp"
             tools:text="TEST" />
     </RelativeLayout>
 </LinearLayout>
